MANVIR SANDBOX/src/objects/Opportunity_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Col_10__c</fullName>
        <label>Col 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col_1__c</fullName>
        <label>Col 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col_2__c</fullName>
        <label>Col 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <externalId>true</externalId>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Budget</relationshipLabel>
        <relationshipName>Opportunity_Budget</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Budget</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>